# cost

./: .coverage  README.md  config.yaml.sample  edit_mode.db  index.html  package-lock.json  package.json  pyproject.toml
api/: __init__.py  db.py  main.py
costetl/: __init__.py  cli.py  config.py  excel.py  integrate.py  load.py  logging_utils.py  normalize.py  schema.py  transform.py  validate.py
docs/: ddl.sql  openapi.yaml
src/: App.tsx  types.ts
src/components/: AnalysisPanel.tsx  ConfigPanel.tsx  CostEditor.tsx  CostOverview.tsx  DatabaseStatus.tsx  FileUpload.tsx  ProcessingResults.tsx
src/costetl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  test_acceptance_sample.py  test_header_detection.py  test_idempotency.py  test_transform.py
